{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 37,
  "lineage": "703538ba-863e-d5c8-6301-016cfff69253",
  "resources": [
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:773187647533:loadbalancer/app/group-alb/c7466a60063b0462",
            "arn_suffix": "app/group-alb/c7466a60063b0462",
            "desync_mitigation_mode": "defensive",
            "dns_name": "group-alb-1810708666.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:773187647533:loadbalancer/app/group-alb/c7466a60063b0462",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "group-alb",
            "security_groups": [
              "sg-0058e880b7fb649dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00913eeb902ae17ac"
              },
              {
                "subnet_id": "subnet-0808bdcce1ca93a1d"
              },
              {
                "subnet_id": "subnet-0f4b2b24f71f46b7d"
              }
            ],
            "subnets": [
              "subnet-00913eeb902ae17ac",
              "subnet-0808bdcce1ca93a1d",
              "subnet-0f4b2b24f71f46b7d"
            ],
            "tags": {
              "BU": "group-testing",
              "Name": "group-alb",
              "Owner": "akshay.raj@tothenew.com",
              "Project": "terraform_drupal",
              "Purpose": "group project"
            },
            "tags_all": {
              "BU": "group-testing",
              "Name": "group-alb",
              "Owner": "akshay.raj@tothenew.com",
              "Project": "terraform_drupal",
              "Purpose": "group project"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0302d9354effb3630",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:773187647533:listener/app/group-alb/c7466a60063b0462/79843c3f5423a54e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:773187647533:targetgroup/tf-20220414140903319500000004/5f4277b01f6d6107",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:773187647533:listener/app/group-alb/c7466a60063b0462/79843c3f5423a54e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:773187647533:loadbalancer/app/group-alb/c7466a60063b0462",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:773187647533:targetgroup/tf-20220414140903319500000004/5f4277b01f6d6107",
            "arn_suffix": "targetgroup/tf-20220414140903319500000004/5f4277b01f6d6107",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 110,
                "matcher": "200-399",
                "path": "/drupal",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 100,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:773187647533:targetgroup/tf-20220414140903319500000004/5f4277b01f6d6107",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220414140903319500000004",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "BU": "group-testing",
              "Owner": "akshay.raj@tothenew.com",
              "Project": "terraform_drupal",
              "Purpose": "group project"
            },
            "tags_all": {
              "BU": "group-testing",
              "Owner": "akshay.raj@tothenew.com",
              "Project": "terraform_drupal",
              "Purpose": "group project"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.security_group_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:security-group/sg-0058e880b7fb649dc",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0058e880b7fb649dc",
            "ingress": [],
            "name": "security-group_asg-20220414140528721200000002",
            "name_prefix": "security-group_asg-",
            "owner_id": "773187647533",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group_asg"
            },
            "tags_all": {
              "Name": "security-group_asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.security_group_asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open internet",
            "from_port": 0,
            "id": "sgrule-4168218957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.security_group_asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-8858101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3054335040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NFS",
            "from_port": 2049,
            "id": "sgrule-1663053529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-668727778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Custom TCP",
            "from_port": 9090,
            "id": "sgrule-560370703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Custom TCP",
            "from_port": 3000,
            "id": "sgrule-1757131766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Custom TCP",
            "from_port": 9093,
            "id": "sgrule-3698349643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9093,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Custom TCP",
            "from_port": 9100,
            "id": "sgrule-1158292729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0058e880b7fb649dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:security-group/sg-0ebace0c1e493ce20",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0ebace0c1e493ce20",
            "ingress": [],
            "name": "security-group_rds-20220414140528720600000001",
            "name_prefix": "security-group_rds-",
            "owner_id": "773187647533",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group_rds"
            },
            "tags_all": {
              "Name": "security-group_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Added ASG SG",
            "from_port": 3306,
            "id": "sgrule-2766598681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ebace0c1e493ce20",
            "self": false,
            "source_security_group_id": "sg-0058e880b7fb649dc",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_asg.aws_security_group.this",
            "module.network.module.security_group_asg.aws_security_group.this_name_prefix",
            "module.network.module.security_group_rds.aws_security_group.this",
            "module.network.module.security_group_rds.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open internet",
            "from_port": 0,
            "id": "sgrule-399686435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ebace0c1e493ce20",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_rds.aws_security_group.this",
            "module.network.module.security_group_rds.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "All TCP",
            "from_port": 0,
            "id": "sgrule-3314243382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ebace0c1e493ce20",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.security_group_rds.aws_security_group.this",
            "module.network.module.security_group_rds.aws_security_group.this_name_prefix",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:internet-gateway/igw-00d5997ba7a3c9618",
            "id": "igw-00d5997ba7a3c9618",
            "owner_id": "773187647533",
            "tags": {
              "Name": "group-vpc"
            },
            "tags_all": {
              "Name": "group-vpc"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d5997ba7a3c9618",
            "id": "r-rtb-07dce3557eeb0920e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07dce3557eeb0920e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:route-table/rtb-0b1b1e4babb8a5ee2",
            "id": "rtb-0b1b1e4babb8a5ee2",
            "owner_id": "773187647533",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "group-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:route-table/rtb-0b530656ac92774a4",
            "id": "rtb-0b530656ac92774a4",
            "owner_id": "773187647533",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "group-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:route-table/rtb-0de6ef1a731c91f22",
            "id": "rtb-0de6ef1a731c91f22",
            "owner_id": "773187647533",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "group-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:route-table/rtb-07dce3557eeb0920e",
            "id": "rtb-07dce3557eeb0920e",
            "owner_id": "773187647533",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "group-vpc-public"
            },
            "tags_all": {
              "Name": "group-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87aa376bbd05203",
            "route_table_id": "rtb-0b1b1e4babb8a5ee2",
            "subnet_id": "subnet-0d6c8bdb36b2ed54e"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0304e2ae45a7132ca",
            "route_table_id": "rtb-0b530656ac92774a4",
            "subnet_id": "subnet-0d277f96cadced82c"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c94c3109e3b337a1",
            "route_table_id": "rtb-0de6ef1a731c91f22",
            "subnet_id": "subnet-0f6e1a04e281261aa"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01554019fcdab2fbe",
            "route_table_id": "rtb-07dce3557eeb0920e",
            "subnet_id": "subnet-0808bdcce1ca93a1d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0c201fb7eb98e3",
            "route_table_id": "rtb-07dce3557eeb0920e",
            "subnet_id": "subnet-0f4b2b24f71f46b7d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023ca842d2e15e752",
            "route_table_id": "rtb-07dce3557eeb0920e",
            "subnet_id": "subnet-00913eeb902ae17ac"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-0d6c8bdb36b2ed54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6c8bdb36b2ed54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-0d277f96cadced82c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d277f96cadced82c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-0f6e1a04e281261aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e1a04e281261aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "group-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-0808bdcce1ca93a1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0808bdcce1ca93a1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "group-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-0f4b2b24f71f46b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4b2b24f71f46b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "group-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:subnet/subnet-00913eeb902ae17ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00913eeb902ae17ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773187647533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "group-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0302d9354effb3630"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773187647533:vpc/vpc-0302d9354effb3630",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afb49beeee1ac6a7",
            "default_route_table_id": "rtb-0b740130957d8d8f3",
            "default_security_group_id": "sg-098f064f8e057c5d4",
            "dhcp_options_id": "dopt-073ae7e4e308c74de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0302d9354effb3630",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b740130957d8d8f3",
            "owner_id": "773187647533",
            "tags": {
              "Name": "group-vpc"
            },
            "tags_all": {
              "Name": "group-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}